# wind-storage-adp

./: .gitignore  ENVIRONMENT.md  README.md  pyproject.toml
docs/: 01_mdp_formulation.md  02_stochastic_processes.md  03_solution_methods.md  04_value_function_approx.md
notebooks/: 01_processes.ipynb  02_environment.ipynb  03_lp_benchmark.ipynb  04_lsapi.ipynb  05_sensitivity.ipynb
prompts/: study_paper.md
src/: basis_functions.py  environment.py  lp_benchmark.py  lsapi.py  stochastic.py  transition_matrix.py
