[project]
name = "wind-storage-adp"
version = "0.1.0"
description = "Python implementation of Löhndorf & Minner (2009): Optimal Day-Ahead Trading and Storage of Renewable Energies via Approximate Dynamic Programming"
readme = "README.md"
authors = [{name = "Claude Sonnet 4.6", email = "noreply@anthropic.com"}]
license = {text = "MIT"}
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "jupyter>=1.0",
    "jupyterlab>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "black>=23.0",
    "mypy>=1.5",
    "ipython>=8.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # line-length handled by black

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
